Rename logo file to mylogo.png and update references for web compatibility

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ word-spacing:5px;
    <nav class="navbar navbar-expand-lg bg-blake shadow-lg ">
         <div class="container-fluid">
             <a href="#" class="navbar-brand fs-3 text-light ">
-                <img src="clothe_img/Mylogo-removebg-preview (1).png" alt="" width="70" height="40">
+                <img src="clothe_img/mylogo.png" alt="" width="70" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" >
                 <span class="navbar-toggler-icon"></span>
